[tool.poetry]
name = "eli5"
version = "0.1.0"
description = ""
authors = ["thejimster82 <james.howerton@twinthread.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "*"
setuptools = "*"
numpy = "^1.9.0"
scipy = "*"
singledispatch = "^3.4.0.3"
scikit-learn = "*"
attrs = "^16.0.0"
jinja2 = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
